<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context=".Details">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:elevation="4dp"
            android:fontFamily="monospace"
            android:hint="@string/name"
            android:padding="12dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:hint="Your Name"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

        <TextView
            android:id="@+id/ageTextView"
            android:layout_width="67dp"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:elevation="4dp"
            android:fontFamily="monospace"
            android:hint="@string/ageText"
            android:padding="12dp"
            android:text="Age"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/ageEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:ems="10"
        android:inputType="number"
        android:maxLength="2" />
</LinearLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/heightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:fontFamily="monospace"
        android:hint="@string/height"
        android:text="Height(m)"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/heightValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />


</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/weightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:fontFamily="monospace"
        android:hint="@string/weight"
        android:text="Weight"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/weightValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:ems="10"
        android:inputType="number"
        android:maxLength="2" />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/proffessionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="monospace"
            android:hint="@string/proffession"
              android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/profession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:ems="10"
            android:inputType="text"
        />


    </LinearLayout>
    <TextView
        android:id="@+id/workoutTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:elevation="4dp"
        android:fontFamily="monospace"
        android:hint="How Active Are You in a week? "
        android:padding="12dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

<RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RadioButton
        android:id="@+id/zeroButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:fontFamily="monospace"
        android:text="0" />

    <RadioButton
        android:id="@+id/oneToTwoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1-2"
        android:fontFamily="monospace"/>

    <RadioButton
        android:id="@+id/threeToFiveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3-5"
        android:fontFamily="monospace"/>

    <RadioButton
        android:id="@+id/sixToSevenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="6-7"
        android:fontFamily="monospace"/>

</RadioGroup>



<Switch
    android:id="@+id/genderSwitch"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_column="0"
    android:layout_columnSpan="2"
    android:layout_row="1"
    android:fontFamily="monospace"
    android:hint="Gender"
    android:padding="12dp"
    android:showText="true"
    android:switchPadding="15sp"
    android:textAlignment="viewStart"
    android:textAllCaps="false"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    android:textOff="♀"
    android:textOn="♂" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>
    <Button
        android:id="@+id/addEntryButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="Submit" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"/>


</android.widget.LinearLayout>
